# arduino-vagrant-rust

./: .gitignore  README.md  Vagrantfile
.github/workflows/: plant-ci.yml
apps/blinky/: Cargo.toml
apps/blinky/src/: main.rs
apps/plant/: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
apps/plant/.cargo/: config
apps/plant/.github/workflows/: ci.yml
apps/plant/app/: Cargo.toml
apps/plant/app/src/: display.rs  main.rs  usb_logger.rs
apps/plant/app/src/sensors/: error.rs  light.rs  mod.rs  moisture.rs  soil_moisture.rs  temperature.rs
apps/plant/assets/: schematic.fzz
apps/plant/lib/: Cargo.toml
apps/plant/lib/src/: lib.rs
apps/plant/src/: main.rs  temperature.rs  usb_logger.rs
apps/plant/src/sensors/: error.rs  mod.rs  moisture.rs  temperature.rs
apps/temp/: temp.ino
provision/: provision.sh
