[package]
name = "plant"
version = "0.0.0"
authors = ["DCRichards"]
edition = "2018"

[dependencies]
arduino_nano33iot = { git = "https://github.com/atsamd-rs/atsamd.git", features = ["unproven", "usb"] }
panic-halt = "0.2.0"
onewire = "0.3.13"
usbd-serial = "0.1.1"
usb-device = "0.2.8"
cortex-m = "0.7.3"
cortex-m-rt = { version = "0.7.0", features = ["device"] }
ssd1306 = "0.7.0"
lib = { path = "../lib" }
